fix(Dropdown): fix the appear and disappear of scrollbar, resolves #502

--- a/src/components/dropdown/_dropdown.scss
+++ b/src/components/dropdown/_dropdown.scss
@@ -92,7 +92,7 @@
     position: absolute;
     z-index: z('dropdown');
     max-height: 0;
-    transition: max-height $transition--expansion $carbon--ease-out;
+    transition: max-height $carbon--ease-in $transition--expansion $carbon--ease-out;
     overflow: hidden;
   }
 
